kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: LoadBalancer
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    app: api
