kubernetes/cic-mc2-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: cic-mc2-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/cic-mc2-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/cic-mc2-default: "true"
